# pants_example

./: .gitignore  README.md  pants.toml  pyproject.toml
src/python/my-subproject/: BUILD  README.md  pyproject.toml
src/python/my-subproject/my_subproject/: __init__.py  main.py  my_script.py
src/python/my-subproject/my_subproject/core/: __init__.py  config.py
src/python/my-subproject/tests/: BUILD  test_my_subproject.py
src/python/my-subproject2/: BUILD  README.md  pyproject.toml
src/python/my-subproject2/my_subproject2/: BUILD  __init__.py  main.py  my_script.py
src/python/my-subproject2/my_subproject2/core/: BUILD  __init__.py  config.py
src/python/my-subproject2/tests/: BUILD  test_my_subproject2.py
